k8s/network/service.yaml
apiVersion: v1
kind: Service
metadata:
 labels:
   name: kube-workshop-svc
 name: kube-workshop-svc
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    name: kube-workshop
